translator-web/src/main/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translator-web
spec:
  selector:
    matchLabels:
      app: translator-web
  replicas: 1
  template:
    metadata:
      labels:
        app: translator-web
    spec:
      containers:
        - name: translator-web
          image: localhost:5000/page-translator/translator-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
