translator-web/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: translator-web
spec:
  type: LoadBalancer
  selector:
    app: translator-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
