translator-web/src/main/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translator-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: translator-web.page-translator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: translator-web
                port:
                  number: 8082
